# yaqd-picotech

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: chopping_module.py  process_module.py  ps2000_triggered_example.py  test_example.toml
yaqd_picotech/: __init__.py  _constants.py  _picotech_adc_triggered.py  _picotech_adc_triggered_gui.py  _yaqd_picotech_adc_triggered.py  picotech-adc-triggered.avpr  picotech-adc-triggered.toml  yaqd-picotech-adc-triggered.avpr  yaqd-picotech-adc-triggered.toml
