[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_picotech"
dist-name = "yaqd-picotech"
author = "Dan Kohler"
author-email = "ddkohler@wisc.edu"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = [
  "yaqd-core>=2020.12.0",
  "picosdk>=1.0"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-picotech"
Issues = "https://gitlab.com/yaq/yaqd-picotech/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-picotech-adc-triggered = "yaqd_picotech._picotech_adc_triggered:PicotechAdcTriggered.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
