[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yaqd-picotech"
authors = [{name="Dan Kohler", email="ddkohler@wisc.edu"}]
requires-python = ">=3.7"
dependencies = ["yaqd-core>=2020.12.0", "picosdk", "numpy"]
license = "ISC"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
gui = [
    "yaqc",
    "pyqtgraph",
    "qtypes",
    "qtpy",
]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-picotech-adc-triggered = "yaqd_picotech._picotech_adc_triggered:PicotechAdcTriggered.main"

[project.urls]
Source = "https://gitlab.com/yaq/yaqd-picotech"
Issues = "https://gitlab.com/yaq/yaqd-picotech/issues"
Homepage = "https://yaq.fyi"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
